# GPTs

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api_server/: api.py  app.py
caddy/: Caddyfile  Caddyfile.test
gpts/actions/: drug_query.yaml
gpts/drug_searcher/: __init__.py  core.py
notebooks/: test.ipynb
scripts/: csv_2_sql.py  extract-openapi.py
tests/: drug.txt  test_openai_func.py
tutorial/: Dockerfile  export_openapi.py  main.py  openapi.yaml  requirements.txt
