[tool.poetry]
name = "gpts"
version = "0.1.0"
description = ""
authors = ["xiaojin <xiaojinwhu10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
polars = "^0.19.14"
openai = "^1.3.3"
rich = "^13.7.0"
pandas = "^2.1.3"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
